# deme_datalogger

./: Makefile  README.md  configure host arm none.txt  env_setup.sh  hello.c  hello_modbus_rtu  modbus.c  toolchain-rk3506.cmake
example/: Makefile  client_zmq  client_zmq.c
libmodbus/: ._AUTHORS  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
libmodbus/install/lib/: libmodbus.la
libmodbus/install/lib/pkgconfig/: libmodbus.pc
libmodbus/src/: Makefile  Makefile.in  libmodbus.la  modbus-data.c  modbus-data.lo  modbus-private.h  modbus-rtu.lo  modbus-tcp.c  modbus-tcp.lo  modbus.c  modbus.lo
libmodbus/src/.deps/: modbus-data.Plo  modbus-rtu.Plo  modbus-tcp.Plo  modbus.Plo
libmodbus/src/.libs/: libmodbus.lai
libmodbus/src/win32/: modbus.dll.manifest
libmodbus/tests/: ._LICENSE  ._random-test-server.c  Makefile  Makefile.in  bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
libmodbus/tests/.deps/: bandwidth-client.Po  bandwidth-server-many-up.Po  bandwidth-server-one.Po  random-test-client.Po  random-test-server.Po  unit-test-client.Po  unit-test-server.Po  version.Po
libmodbus/tests/.libs/: bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
project_demo/: Makefile  main.cpp  makefile_old.txt  monitor.cpp  monitor.h
project_demo/components/dist_libs/include/: meter_config.h  meter_driver.h
project_demo/components/libcjson/: CMakeLists.txt  cJSON.c  cJSON.h
project_demo/configures/plugins/meter/: DPM380.json  meter_config.json
project_demo/drivers/: driver.h  mapping.h
project_demo/drivers/meter_driver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  meter_config.h
project_demo/drivers/meter_driver/include/: meter_config.h  meter_driver.h
project_demo/drivers/meter_driver/src/: meter_config.cpp  meter_driver.cpp
project_demo/services/EVN/: CMakeLists.txt  EVN_service.cpp
project_demo/services/EVN/test104/: test104.py
project_demo/services/data_normalize/: data_normalize.py  subscriber.py
project_demo/services/example/: CMakeLists.txt  README.md  loadFileTest.cpp  modbus.cpp  toolchain.cmake
project_demo/services/logger/: CMakeLists.txt  main.cpp  toolchain-rk3506.cmake
project_demo/services/mb_master/: CMakeLists.txt  example.cpp  mb_master.cpp  mb_master.h  modbus_config.h  modbus_ex.cpp  modbus_ex.h  modbus_manager.cpp  modbus_manager.h  modbus_service.cpp  modbus_test.cpp  zmq_manager.cpp
project_demo/services/readModbus4Config/: CMakeLists.txt  readModbus4Config.cpp
project_demo/services/rtc/: CMakeLists.txt  rtc.cpp
project_demo/services/test_py/: check_zmq.py  core_service.py  mqtt_test.py  router_test.py  test_control_client.py
project_demo/services/transport/: transport.h
project_demo/services/transport/zmq/: readme.md  zmq.cpp  zmq.h
project_demo/shared-config/plugins/meter/: meter_config.json
zmq/: Makefile
